@@ -3,6 +3,8 @@ Changelog
 
 4.4-dev - (unreleased)
 ----------------------
+* Bug fix: don't trigger Unauthorized error in portlet navigation
+  [tiberich]
 
 4.3 - (2012-06-12)
 ------------------
